--- a/css/main.css
+++ b/css/main.css
@@ -30,19 +30,64 @@ html {
 }
 
 .navbar li {
-    display: inline;
+    display: inline-block;
     padding: 15px 0 15px 0;
 }
 
-.navbar li:hover {
+.navbar li:hover,.dropdown:hover .dropbtn,.dropdownInterviews:hover .dropbtnInterviews {
   background-color: #DDDDDD;
 }
 
 
 .navbar li a {
-      padding: 15px 20px 15px 20px;
+  padding: 15px 20px 15px 20px;
   color: #404040;
   font-family: 'Lato', sans-serif;
   text-transform: uppercase;
   text-decoration: none;
+}
+
+/* The dropdown container */
+.dropdown,.dropdownInterviews {
+  float:left;
+  overflow: hidden;
+}
+
+/* Dropdown button */
+.dropdown .dropbtn ,.dropdownInterviews .dropbtnInterviews{
+  font-family: 'Lato', sans-serif;
+  text-transform: uppercase;
+  text-decoration: none;
+  font-size: 17px;
+  border: none;
+  outline: none;
+  color: #404040;
+  padding: 15px 20px 15px 20px;
+  background-color: inherit;
+  margin: 0; /* Important for vertical align on mobile phones */
+}
+.dropdown-content,.dropdown-contentInterviews {
+  display: none;
+  position: absolute;
+  background-color: white;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+.dropdown-content a,.dropdown-contentInterviews a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+/* Add a grey background color to dropdown links on hover */
+.dropdown-content a:hover, .dropdown-contentInterviews a:hover {
+  background-color: #ddd;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content,.dropdownInterviews:hover .dropdown-contentInterviews {
+  display: block;
 }
