--- a/css/main.css
+++ b/css/main.css
@@ -3,8 +3,15 @@
 html {
   height: 100%;
   background: linear-gradient(to bottom right, #DADADA, #FFFFFF);
+  padding:0;
+  width:100%;
 }
-
+*{
+  box-sizing: border-box;
+}
+body{
+  margin:0px;
+}
 .title {
   display: block;
   height: 80px;
@@ -90,4 +97,58 @@ html {
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content,.dropdownInterviews:hover .dropdown-contentInterviews {
   display: block;
+}
+
+.flex-container{
+  display:flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  height: 800px;
+  padding-top: 10px;
+  padding-bottom: 0;
+
+}
+.introduction h1{
+  padding-left: 75px;
+
+}
+.introduction{
+  border-right: 1px solid #ccc;
+  float:left;
+  width: 60%;
+}
+
+.resources h1{
+  padding-left: 55px;
+
+}
+.resources{
+  float:right;
+  width: 40%;
+  height: 50%;
+}
+
+.newsletter h1{
+  padding-left: 75px;
+
+}
+.newsletter{
+  padding-top: 0px;
+  background-color: red;
+  width: 100%;
+  padding: 0;
+
+}
+
+.footer{
+  position: static
+  z-index: 10;
+  bottom: 0;
+  padding-top: 5px;
+  width: 100%;
+  margin: 0;
+  height: 146px;
+  background-color: black;
+  color:white;
+  text-align: center;
 }
