--- a/css/resume-cover-letter.css
+++ b/css/resume-cover-letter.css
@@ -1,3 +1,28 @@
 #resumelink {
   background-color: #DDDDDD;
 }
+
+.resume, .cover_letter {
+  width: 80%;
+  margin-left: 10%;
+  margin-bottom: 50px;
+  display: flex;
+}
+
+.resume_text, .cover_letter_text {
+  display: inline-block;
+}
+
+.resume_text h1, .cover_letter_text h1 {
+  text-decoration: underline;
+}
+
+.resume_example, .cover_letter_example {
+  display: inline-block;
+}
+
+.resume_example img, .cover_letter_example img {
+  width: 90%;
+  margin-top: 80px;
+  margin-left: 60px;
+}
