--- a/css/main.css
+++ b/css/main.css
@@ -103,11 +103,13 @@ body {
   padding-top: 10px;
   padding-bottom: 0;
 }
+
 .flex-container p{
  float:left;
  padding-left: 76px;
  padding-right: 50px;
 }
+
 .introduction h1 {
   padding-left: 75px;
 }
@@ -160,7 +162,7 @@ body {
 /* The sidebar menu for big5*/
 .sidenav {
     height: 100%; /* Full-height: remove this if you want "auto" height */
-    width: 160px; /* Set the width of the sidebar */
+    width: 80px; /* Set the width of the sidebar */
     position: fixed; /* Fixed Sidebar (stay in place on scroll) */
     z-index: 1; /* Stay on top */
     top: 0; /* Stay at the top */
@@ -173,7 +175,7 @@ body {
 /* The navigation menu links */
 .sidenav a {
     padding: 6px 8px 6px 16px;
-    padding-left: 100px;
+    padding-left: 20px;
     text-decoration: none;
     font-size: 25px;
     color: #818181;
@@ -183,4 +185,10 @@ body {
 /* When you mouse over the navigation links, change their color */
 .sidenav a:hover {
     color: #f1f1f1;
+}
+
+.section{
+  margin-bottom: 500px;
+  padding-left: 120px;
+  position: relative;
 }
