--- a/css/employer-input.css
+++ b/css/employer-input.css
@@ -1,3 +1,15 @@
 #employerlink {
   background-color: #DDDDDD;
 }
+
+.content {
+  margin: 30px 0 30px 0;
+}
+
+.input {
+  background-color: #DADADA;
+  margin: 30px 50px 30px 50px;
+  padding: 10px 30px 20px 30px;
+  border: 10px groove #CACACA;
+  border-radius: 10px;
+}
